--- a/index.html
+++ b/index.html
@@ -4,9 +4,72 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="./style.css">
 	<title>Image Slider</title>
 </head>
 <body>
-	
+	<!-- image slider -->
+	<div class="slider">
+		<div class="slides">
+			<!-- radio buttons -->
+			<input type="radio" name="radio-btn" id="radio1">
+			<input type="radio" name="radio-btn" id="radio2">
+			<input type="radio" name="radio-btn" id="radio3">
+			<input type="radio" name="radio-btn" id="radio4">
+			<input type="radio" name="radio-btn" id="radio5">
+			<input type="radio" name="radio-btn" id="radio6">
+			<input type="radio" name="radio-btn" id="radio7">
+			<input type="radio" name="radio-btn" id="radio8">
+			<!-- slide images -->
+			<div class="slide first">
+				<img src="./img/01.jpg" alt="house">
+			</div>
+			<div class="slide">
+				<img src="./img/02.jpg" alt="swamp">
+			</div>
+			<div class="slide">
+				<img src="./img/03.jpg" alt="lake">
+			</div>
+			<div class="slide">
+				<img src="./img/04.jpg" alt="forest">
+			</div>
+			<div class="slide">
+				<img src="./img/05.jpg" alt="trail">
+			</div>
+			<div class="slide">
+				<img src="./img/06.jpg" alt="well">
+			</div>
+			<div class="slide">
+				<img src="./img/07.jpg" alt="road">
+			</div>
+			<div class="slide">
+				<img src="./img/08.jpg" alt="field">
+			</div>
+			<!-- automatic navigation -->
+			<div class="navigation-auto">
+				<div class="auto-btn1"></div>
+				<div class="auto-btn2"></div>
+				<div class="auto-btn3"></div>
+				<div class="auto-btn4"></div>
+				<div class="auto-btn5"></div>
+				<div class="auto-btn6"></div>
+				<div class="auto-btn7"></div>
+				<div class="auto-btn8"></div>
+			</div>
+			<!-- manual navigation -->
+			<div class="navigation-manual">
+				<label for="radio1" class="manual-btn"></label>
+				<label for="radio2" class="manual-btn"></label>
+				<label for="radio3" class="manual-btn"></label>
+				<label for="radio4" class="manual-btn"></label>
+				<label for="radio5" class="manual-btn"></label>
+				<label for="radio6" class="manual-btn"></label>
+				<label for="radio7" class="manual-btn"></label>
+				<label for="radio8" class="manual-btn"></label>
+			</div>
+		</div>
+	</div>
+
+	<script src="./script.js"></script>
 </body>
 </html>
